--- a/.github/workflows/margecheck.yaml
+++ b/.github/workflows/margecheck.yaml
@@ -1,21 +1,24 @@
-name: Pull Request Check
+name: Pull Request
 
 on:
   pull_request:
-    branches:
-      - main
-    types: [opened, synchronize, reopened, labeled]
+    types:
+      - synchronize
+      - labeled
+      - unlabeled
+      - opened
+      - reopened
 
 permissions:
   statuses: write
 
 jobs:
-  is-ready:
+  ready-deploy:
     runs-on: ubuntu-latest
     name: Label Check
     steps:
       - name: Set status check to success
-        if: contains(github.event.pull_request.labels.*.name, 'マージOK')
+        if: "contains(github.event.pull_request.labels.*.name, 'マージOK')"
         run: |
           curl --request POST \
             --url https://api.github.com/repos/${{github.repository}}/statuses/${{github.event.pull_request.head.sha}} \
@@ -27,14 +30,14 @@ jobs:
               "description": "マージできます"
             }'
       - name: Set status check to pending
-        if: !contains(github.event.pull_request.labels.*.name, 'マージOK')
+        if: "!contains(github.event.pull_request.labels.*.name, 'マージOK')"
         run: |
           curl --request POST \
-          --url https://api.github.com/repos/${{github.repository}}/statuses/${{github.event.pull_request.head.sha}} \
-          --header 'authorization: Bearer ${{secrets.GITHUB_TOKEN}}' \
-          --header 'content-type: application/json' \
-          --data '{
-            "context": "Label Check",
-            "state": "pending",
-            "description": "\"マージOK\" ラベルを付けるとマージできます"
-          }'
+            --url https://api.github.com/repos/${{github.repository}}/statuses/${{github.event.pull_request.head.sha}} \
+            --header 'authorization: Bearer ${{secrets.GITHUB_TOKEN}}' \
+            --header 'content-type: application/json' \
+            --data '{
+              "context": "Label Check",
+              "state": "pending",
+              "description": "\"マージOK\" ラベルを付けるとマージできます"
+            }'
