--- a/.github/workflows/margecheck.yaml
+++ b/.github/workflows/margecheck.yaml
@@ -1,43 +1,40 @@
-name: Pull Request
+name: Pull Request Check
 
 on:
   pull_request:
-    types:
-      - synchronize
-      - labeled
-      - unlabeled
-      - opened
-      - reopened
+    branches:
+      - main
+    types: [opened, synchronize, reopened, labeled]
 
 permissions:
   statuses: write
 
 jobs:
-  ready-deploy:
+  is-ready:
     runs-on: ubuntu-latest
     name: Label Check
     steps:
       - name: Set status check to success
-        if: contains(github.event.pull_request.labels.*.name, 'マージOK')
+        if: contains(github.event.pull_request.labels.*.name, "マージOK")
         run: |
           curl --request POST \
             --url https://api.github.com/repos/${{github.repository}}/statuses/${{github.event.pull_request.head.sha}} \
-            --header 'authorization: Bearer ${{secrets.GITHUB_TOKEN}}' \
-            --header 'content-type: application/json' \
-            --data '{
+            --header "authorization: Bearer ${{secrets.GITHUB_TOKEN}}" \
+            --header "content-type: application/json" \
+            --data "{
               "context": "Label Check",
               "state": "success",
               "description": "マージできます"
-            }'
+            }"
       - name: Set status check to pending
-        if: !contains(github.event.pull_request.labels.*.name, 'マージOK')
+        if: !contains(github.event.pull_request.labels.*.name, "マージOK")
         run: |
           curl --request POST \
-            --url https://api.github.com/repos/${{github.repository}}/statuses/${{github.event.pull_request.head.sha}} \
-            --header 'authorization: Bearer ${{secrets.GITHUB_TOKEN}}' \
-            --header 'content-type: application/json' \
-            --data '{
-              "context": "Label Check",
-              "state": "pending",
-              "description": "\"マージOK\" ラベルを付けるとマージできます"
-            }'
+          --url https://api.github.com/repos/${{github.repository}}/statuses/${{github.event.pull_request.head.sha}} \
+          --header "authorization: Bearer ${{secrets.GITHUB_TOKEN}}" \
+          --header "content-type: application/json" \
+          --data "{
+            "context": "Label Check",
+            "state": "pending",
+            "description": "\"マージOK\" ラベルを付けるとマージできます"
+          }"
