--- a/.github/workflows/margecheck.yaml
+++ b/.github/workflows/margecheck.yaml
@@ -26,8 +26,9 @@ jobs:
             "state": "success",
             "description": "マージできます"
             }"
-      # - name: Set status check to pending
-      #   if: !contains(github.event.pull_request.labels.*.name, 'マージOK')
+      - name: Set status check to pending
+        if: contains(github.event.pull_request.labels.*.name, 'マージOK')
+        run: echo "マージOK ラベルを付けるとマージできます"
       #   run: |
       #       curl --request POST \
       #       --url https://api.github.com/repos/${{github.repository}}/statuses/${{github.event.pull_request.head.sha}} \
