--- a/.github/workflows/margecheck.yaml
+++ b/.github/workflows/margecheck.yaml
@@ -14,7 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     name: Label Check
     steps:
-      - name: Set status check to success
+      - name: check-success
+        id: check_success
         if: contains(github.event.pull_request.labels.*.name, 'マージOK')
         run: |
             curl --request POST \
@@ -26,8 +27,8 @@ jobs:
             "state": "success",
             "description": "マージできます"
             }"
-      - name: Set status check to pending
-        if: contains(github.event.pull_request.labels.*.name, 'マージOK')
+      - name: check-pending
+        if: steps.check_success.conclusion == 'skipped'
         run: |
             curl --request POST \
             --url https://api.github.com/repos/${{github.repository}}/statuses/${{github.event.pull_request.head.sha}} \
