--- a/.github/workflows/margecheck.yaml
+++ b/.github/workflows/margecheck.yaml
@@ -14,28 +14,19 @@ jobs:
     runs-on: ubuntu-latest
     name: Label Check
     steps:
-      - name: check-success
-        id: check_success
-        if: contains(github.event.pull_request.labels.*.name, 'マージOK')
+      - name: Check Required Label
+        id: label_check
+        uses: actions/checkout@v3
+
+      - name: Check for Label
         run: |
-            curl --request POST \
-            --url https://api.github.com/repos/${{github.repository}}/statuses/${{github.event.pull_request.head.sha}} \
-            --header "authorization: Bearer ${{secrets.GITHUB_TOKEN}}" \
-            --header "content-type: application/json" \
-            --data "{
-            "context": "Label Check",
-            "state": "success",
-            "description": "マージできます"
-            }"
-      - name: check-pending
-        if: steps.check_success.conclusion == 'skipped'
-        run: |
-            curl --request POST \
-            --url https://api.github.com/repos/${{github.repository}}/statuses/${{github.event.pull_request.head.sha}} \
-            --header "authorization: Bearer ${{secrets.GITHUB_TOKEN}}" \
-            --header "content-type: application/json" \
-            --data "{
-            "context": "Label Check",
-            "state": "pending",
-            "description": "\"マージOK\" ラベルを付けるとマージできます"
-            }"
+          labels=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+                      "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}" | \
+                      jq -r '.labels[].name')
+          if [[ "$labels" == *"label-required"* ]]; then
+            echo "Required label found: label-required"
+          else
+            echo "Required label not found"
+            echo "Please add the 'label-required' label to this pull request."
+            exit 1
+          fi
