--- a/.github/workflows/margecheck.yaml
+++ b/.github/workflows/margecheck.yaml
@@ -1,4 +1,4 @@
-name: Do Not Merge
+name: PR Label Check
 
 on:
   pull_request:
@@ -7,6 +7,7 @@ on:
 jobs:
   do-not-merge:
     runs-on: ubuntu-latest
+    name: Label Check
     steps:
       - name: check labels
         uses: mheap/github-action-required-labels@v5
